--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,6 @@ convex/_generated/
 
 # Convex Configuration (contains deployment URL)
 **/ConvexConfiguration.xcconfig
+
+# Config File (contains Gemini API Key)
+**/Configuration.swift
